# ComfyUI_LLM_Banana

./: ChatFly_config.json  Gemini_Banana_config.json  Gemini_config.json  Gigapixel_config.json  Glm_Config.json  README.md  README_NANO_BANANA_2_UPDATE.md  Translation_config.json  __init__.py  banana2_prompt_template.py  banana_upscale.py  batch_fix_mirror_nodes.py  check_api4gpt_models.py  check_comfyui_nodes.py  cleanup_mirror_file.py  clear_cache.bat  comfly.py  fix_remaining_nodes.py  gemini.py  gemini_banana.py  gemini_banana_mirror.py  gemini_banana_translation.py  general_api.py  glm.py  image_collage_node.py  image_prompts.txt  joycaption.py  openrouter_diagnostic.py  pyproject.toml  quick_fix_ai_upscale.py  reference_gemini_banana.py  requirements.txt  text_prompts.txt  universal_subject_detection.py  系统提示词预设.txt
docs/: BANANA2_README.md  SORA_3Panel_Template_使用指南.md  SORA_3Panel_Template_完整示例.md  SORA_3vs5宫格_对比指南.md  SORA_5Panel_Template_使用指南.md  SORA_5Panel_Template_完整示例.md  banana2_advanced_config.md  banana2_prompt_template_guide.md  banana2_quick_start.md  banana2_template_details.md  banana2_use_cases.md  迭代优化_快速参考.md  迭代优化工作流使用指南.md
examples/: Gemini_Banana_example (4).json  Gemini_Banana_example.json  Nano-Banana官方API调用.json  迭代优化_多图编辑工作流.json  通用BananaAPI.json  镜像API调用.json
sessions/: 10.json  182.json  9.json
web/: dynamic_collage.js
wildcards/: color.txt  style.txt
