[project]
name = "ComfyUI_LLM_Banana"
description = "ComfyUI banana Nodes: Seamlessly integrate banana models into ComfyUI for enhanced image generation and image edit capabilities. Features include image generation and banana image edit."
version = "2.2.0"
license = {file = "LICENSE"}
dependencies = ["gemini"]

[project.urls]
Repository = "https://github.com/xuchenxu168/ComfyUI_LLM_Banana"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "xuchenxu168"
DisplayName = "ComfyUI_LLM_Banana"
Icon = ""
includes = []


